# RequirementGratherer

./: .gitignore
customerresearcher/: .env.example  README.md  pyproject.toml
customerresearcher/src/customerresearcher/: crew.py  main.py
customerresearcher/src/customerresearcher/config/: agents.yaml  tasks.yaml
