[tool.poetry]
name = "customerresearcher"
version = "0.1.0"
description = "CustomerResearcher using crewAI"
authors = ["Abhinav Palash"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
customerresearcher = "customerresearcher.main:run"
run_crew = "customerresearcher.main:run"
train = "customerresearcher.main:train"
replay = "customerresearcher.main:replay"
test = "customerresearcher.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
